make strafe work

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "BSD",
   "dependencies": {
     "serialport": "~1.2.3",
-    "ar-drone": "~0.3.0"
+    "ar-drone": "~0.3.0",
+    "ardrone-autonomy": "~0.1.1"
   }
 }
